gcc/testsuite/g++.dg/cpp0x/regress/49290.C
@@ -1,0 +1,12 @@
+typedef unsigned T;
+struct S
+{
+  T foo (void);
+  static unsigned s1[16];
+};
+T
+S::foo ()
+{
+  T u = *(T *) (s1 + 10);
+  return u;
+}
